# ezn-winman

./: CMakeLists.txt  LICENSE  README.md
examples/: fullscreen.cpp  simple.cpp
include/: ezn_input.h  ezn_input_codes.h  ezn_window.h  ezn_winman.h
src/: ezn_input.cpp  ezn_window.cpp  ezn_winman.cpp
